--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gadgets-specifications-client",
+  "name": "transport-route-bd-client",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "next": "13.3.1",
-    "postcss": "8.4.23",
+    "@emotion/react": "^11.10.6",
+    "chart.js": "^4.2.1",
+    "next": "13.2.4",
+    "next-themes": "^0.2.1",
+    "npm": "^9.6.3",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "react-geocode": "^0.2.3",
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "react-select": "^5.7.2",
+    "react-spinners": "^0.13.8",
+    "redux": "^4.2.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
