--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
+    "axios": "^1.3.6",
     "chart.js": "^4.2.1",
+    "date-fns": "^2.29.3",
     "next": "13.2.4",
     "next-themes": "^0.2.1",
     "npm": "^9.6.3",
@@ -22,7 +24,8 @@
     "react-redux": "^8.0.5",
     "react-select": "^5.7.2",
     "react-spinners": "^0.13.8",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "swr": "^2.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
