--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "date-fns": "^2.29.3",
     "next": "13.2.4",
     "next-themes": "^0.2.1",
+    "nextjs-progressbar": "^0.0.16",
     "npm": "^9.6.3",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
