--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "axios": "^1.3.6",
     "chart.js": "^4.2.1",
+    "cookie": "^0.5.0",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "next": "13.2.4",
+    "next-seo": "^6.0.0",
     "next-themes": "^0.2.1",
     "nextjs-progressbar": "^0.0.16",
     "npm": "^9.6.3",
